# pancax

./: .buildinfo  .flake8  .gitignore  404.html  README.md  book.toml  genindex.html  index.html  introduction.html  modules.html  objects.inv  pancax.bcs.html  pancax.bvps.html  pancax.constitutive_models.html  pancax.data.html  pancax.domains.html  pancax.fem.elements.html  pancax.fem.html  pancax.html  pancax.kernels.html  pancax.loss_functions.html  pancax.math.html  pancax.networks.html  pancax.optimizers.html  pancax.physics_kernels.html  pancax.problems.html  print.html  py-modindex.html  pyproject.toml  run_unit_tests.sh  search.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: Book.yml  CI.yml  Deploy.yml  Docs.yml  Lint.yml
_modules/: index.html
_modules/pancax/: history_writer.html  kinematics.html  logging.html  networks.html  physics.html  post_processor.html  timer.html  trainer.html  utils.html
_sources/: modules.rst.txt  pancax.bcs.rst.txt  pancax.bvps.rst.txt  pancax.constitutive_models.rst.txt  pancax.data.rst.txt  pancax.domains.rst.txt  pancax.fem.elements.rst.txt  pancax.fem.rst.txt  pancax.kernels.rst.txt  pancax.loss_functions.rst.txt  pancax.math.rst.txt  pancax.networks.rst.txt  pancax.optimizers.rst.txt  pancax.physics_kernels.rst.txt  pancax.problems.rst.txt  pancax.rst.txt
api/: pancax.html
book/: SUMMARY.md  introduction.md
book/design/: design.md
book/examples/: examples.md
book/implementations/: collocation.md  implementations.md
book/theory/: general.md  lagrangian_form.md  solid_mechanics.md  strong_form.md  theory.md
design/: bcs.html  design.html  domains.html
docker/rocm/: Dockerfile  requirements.txt
docs/source/: conf.py  index.rst
examples/: examples.html  poisson_equation.html
examples/meec/: pyproject.toml
implementations/: collocation.html  implementations.html  lagrangian.html  variational.html
jl/PANCAX/: Manifest.toml  Project.toml
pancax/: __init__.py  __main__.py  bcs.py  data.py  distance_functions.py  domains.py  history_writer.py  kinematics.py  logging.py  optimizers.py  physics.py  post_processor.py  problem.py  problems.py  timer.py  trainer.py  utils.py
pancax/bcs/: __init__.py  dirichlet_bc.py  distance_functions.py  distance_functions_old.py  essential_bc.py  natural_bc.py  neumann_bc.py
pancax/bvps/: __init__.py  biaxial_tension.py  simple_shear.py  uniaxial_tension.py
pancax/cli/: __init__.py  cli.py
pancax/constitutive_models/: __init__.py  base.py  base_constitutive_model.py  blatz_ko.py  gent.py  neohookean.py  properties.py  swanson.py
pancax/data/: __init__.py  full_field_data.py  global_data.py
pancax/deprecated/: properties.py
pancax/domains/: __init__.py  base.py  base_domain.py  collocation_domain.py  delta_pinn_domain.py  inverse_domain.py  utils.py  variational_domain.py
pancax/fem/: __init__.py  dof_manager.py  function_space.py  mesh.py  quadrature_rules.py  read_exodus_mesh.py  sparse_matrix_assembler.py  surface.py  traction_bc.py
pancax/kernels/: __init__.py  base_kernel.py  laplace_beltrami.py  linear_elasticity.py  poisson.py  (+1 more)
scripts/: extract_full_field_mechanics_data.py  extract_global_mechanics_data.py  make_book.sh  plot_force_disp.py  rocm-docker.sh  run_linter.sh  run_unit_tests.sh
test/: test_post_processors.py  test_utils.py
theory/: lagrangian_form.html  solid_mechanics.html  strong_form.html  theory.html  weak_form.html
(+317 files in other folders)
