[project]
name = 'pancax'
version = '0.0.12'
authors = [
  {name = 'Craig M. Hamel, email = <chamel@sandia.gov>'}
]
dependencies = [
  'matplotlib',
  'meshio',
  'netCDF4',
  'pandas',
  'scipy',
  'vtk'
]

[project.optional-dependencies]
cpu = [
  'chex',
  'equinox==0.12.1',
  'jax==0.5.0',
  'jaxtyping',
  'optax'
]
cuda = [
  'chex',
  'equinox==0.12.1',
  'jax[cuda12]==0.5.0',
  'jaxtyping',
  'optax'
]
dev = [
  'flake8',
  'pytest',
  'pytest-cov',
  'pytest-xdist',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-rtd-theme',
  'sphinxcontrib-bibtex',
  'sphinxcontrib-napoleon'
]
rocm = [
  'chex',
  'equinox==0.12.1',
  'jax[rocm]==0.5.0',
  'jaxtyping',
  'optax'
]
viz = [
  'pyvista'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.setuptools]
[tool.hatch.build.targets.wheel]
packages = [
  'pancax'
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no coverage",
  "if __name__ == '__main__'",
  "def main",
  "def __repr__",
  "pass"
]

#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "-ra -q --disable-warnings"
#testpaths = [
#    "test"
#]
