[project]
name = 'pancax'
version = '0.0.15'
authors = [
  {name = 'Craig M. Hamel, email = <chamel@sandia.gov>'}
]
dependencies = [
  'matplotlib',
  'meshio',
  'netCDF4',
  'pandas',
  'scipy',
  'vtk'
]

[project.optional-dependencies]
cpu = [
  'equinox~=0.13',
  'jax~=0.6.2',
  'jaxtyping',
  'optax'
]
cuda = [
  'equinox~=0.13',
  'jax[cuda12]~=0.6.2',
  'jaxtyping',
  'optax'
]
dev = [
  'flake8',
  'pytest',
  'pytest-cov',
  'pytest-xdist',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-rtd-theme',
  'sphinxcontrib-bibtex',
  'sphinxcontrib-napoleon'
]
rocm = [
  'chex',
  'equinox~=0.13',
  'jax[rocm]~=0.5',
  'jaxtyping',
  'optax'
]
viz = [
  'pyvista'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pancax = "pancax.cli:pancax_main"

[tool.hatch.build.targets.wheel]
packages = [
  'pancax'
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no coverage",
  "if __name__ == '__main__'",
  "def main",
  "def __repr__",
  "pass"
]
